Windows/ClepsToolset/ClepsToolset/ClepsParser/AntlrBuild/ClepsParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\shravan\Documents\GitHubVisualStudio\Cleps\Windows\ClepsToolset\ClepsToolset\ClepsParser\AntlrBuild\Cleps.g4 by ANTLR 4.5.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.1")]
[System.CLSCompliant(false)]
public partial class ClepsParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, COMMENT_SINGLELINE=16, 
		COMMENT_MULTILINE=17, WS=18, USING=19, END=20, NAMESPACE=21, NEW=22, CLASS=23, 
		STATIC=24, PUBLIC=25, INTERNAL=26, VOID=27, TRUE=28, FALSE=29, NULL=30, 
		IF=31, FOR=32, DO=33, WHILE=34, RETURN=35, ASSIGNMENT=36, OPERATOR=37, 
		ASSIGNMENT_OPERATOR=38, PASCALCASE_ID=39, ID=40, NUMERIC_TOKEN=41, OPERATOR_SYMBOL_LEXER=42;
	public const int
		RULE_operatorSymbol = 0, RULE_stringValue = 1, RULE_variable = 2, RULE_nestedIdentifier = 3, 
		RULE_numeric = 4, RULE_classOrMemberName = 5, RULE_visibilityModifier = 6, 
		RULE_typename = 7, RULE_typenameAndVoid = 8, RULE_compilationUnit = 9, 
		RULE_namespaceBlockStatement = 10, RULE_usingNamespaceStatement = 11, 
		RULE_usingNamespaceStatements = 12, RULE_classDeclarationStatements = 13, 
		RULE_classBodyStatements = 14, RULE_memberDeclarationStatement = 15, RULE_rightHandExpression = 16, 
		RULE_rightHandExpressionSimple = 17, RULE_numericAssignments = 18, RULE_nullAssignment = 19, 
		RULE_booleanAssignments = 20, RULE_stringAssignments = 21, RULE_arrayAssignment = 22, 
		RULE_functionCallAssignment = 23, RULE_variableAssignment = 24, RULE_fieldOrClassAssignment = 25, 
		RULE_classInstanceAssignment = 26, RULE_functionAssignment = 27, RULE_functionCall = 28, 
		RULE_statementBlock = 29, RULE_functionStatement = 30, RULE_functionReturnStatement = 31, 
		RULE_functionVariableDeclarationStatement = 32, RULE_functionVariableAssignmentStatement = 33, 
		RULE_functionFieldAssignmentStatement = 34, RULE_functionArrayAssignmentStatement = 35, 
		RULE_functionCallStatement = 36, RULE_ifStatement = 37, RULE_doWhileStatement = 38;
	public static readonly string[] ruleNames = {
		"operatorSymbol", "stringValue", "variable", "nestedIdentifier", "numeric", 
		"classOrMemberName", "visibilityModifier", "typename", "typenameAndVoid", 
		"compilationUnit", "namespaceBlockStatement", "usingNamespaceStatement", 
		"usingNamespaceStatements", "classDeclarationStatements", "classBodyStatements", 
		"memberDeclarationStatement", "rightHandExpression", "rightHandExpressionSimple", 
		"numericAssignments", "nullAssignment", "booleanAssignments", "stringAssignments", 
		"arrayAssignment", "functionCallAssignment", "variableAssignment", "fieldOrClassAssignment", 
		"classInstanceAssignment", "functionAssignment", "functionCall", "statementBlock", 
		"functionStatement", "functionReturnStatement", "functionVariableDeclarationStatement", 
		"functionVariableAssignmentStatement", "functionFieldAssignmentStatement", 
		"functionArrayAssignmentStatement", "functionCallStatement", "ifStatement", 
		"doWhileStatement"
	};

	private static readonly string[] _LiteralNames = {
		null, "'*'", "'\"'", "'\\\"'", "''''", "'\\''", "'@'", "'.'", "'['", "','", 
		"']'", "'('", "')'", "'->'", "'{'", "'}'", null, null, null, "'using'", 
		"';'", "'namespace'", "'new'", "'class'", "'static'", "'public'", "'internal'", 
		"'void'", "'true'", "'false'", "'null'", "'if'", "'for'", "'do'", "'while'", 
		"'return'", "'assignment'", "'operator'", "'='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "COMMENT_SINGLELINE", "COMMENT_MULTILINE", "WS", 
		"USING", "END", "NAMESPACE", "NEW", "CLASS", "STATIC", "PUBLIC", "INTERNAL", 
		"VOID", "TRUE", "FALSE", "NULL", "IF", "FOR", "DO", "WHILE", "RETURN", 
		"ASSIGNMENT", "OPERATOR", "ASSIGNMENT_OPERATOR", "PASCALCASE_ID", "ID", 
		"NUMERIC_TOKEN", "OPERATOR_SYMBOL_LEXER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Cleps.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public ClepsParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class OperatorSymbolContext : ParserRuleContext {
		public ITerminalNode OPERATOR_SYMBOL_LEXER() { return GetToken(ClepsParser.OPERATOR_SYMBOL_LEXER, 0); }
		public OperatorSymbolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operatorSymbol; } }
		public override void EnterRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.EnterOperatorSymbol(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.ExitOperatorSymbol(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IClepsVisitor<TResult> typedVisitor = visitor as IClepsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorSymbol(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperatorSymbolContext operatorSymbol() {
		OperatorSymbolContext _localctx = new OperatorSymbolContext(Context, State);
		EnterRule(_localctx, 0, RULE_operatorSymbol);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			_la = TokenStream.La(1);
			if ( !(_la==T__0 || _la==OPERATOR_SYMBOL_LEXER) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StringValueContext : ParserRuleContext {
		public IToken StringType;
		public IToken StringStyle;
		public ITerminalNode ID() { return GetToken(ClepsParser.ID, 0); }
		public StringValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stringValue; } }
		public override void EnterRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.EnterStringValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.ExitStringValue(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IClepsVisitor<TResult> typedVisitor = visitor as IClepsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStringValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StringValueContext stringValue() {
		StringValueContext _localctx = new StringValueContext(Context, State);
		EnterRule(_localctx, 2, RULE_stringValue);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 81;
			_la = TokenStream.La(1);
			if (_la==ID) {
				{
				State = 80; _localctx.StringType = Match(ID);
				}
			}

			State = 101;
			switch (TokenStream.La(1)) {
			case T__1:
				{
				State = 83; _localctx.StringStyle = Match(T__1);
				State = 88;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
				while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
					if ( _alt==1+1 ) {
						{
						State = 86;
						switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
						case 1:
							{
							State = 84; Match(T__2);
							}
							break;
						case 2:
							{
							State = 85;
							MatchWildcard();
							}
							break;
						}
						} 
					}
					State = 90;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
				}
				State = 91; Match(T__1);
				}
				break;
			case T__3:
				{
				State = 92; _localctx.StringStyle = Match(T__3);
				State = 97;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
				while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
					if ( _alt==1+1 ) {
						{
						State = 95;
						switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
						case 1:
							{
							State = 93; Match(T__4);
							}
							break;
						case 2:
							{
							State = 94;
							MatchWildcard();
							}
							break;
						}
						} 
					}
					State = 99;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
				}
				State = 100; Match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableContext : ParserRuleContext {
		public IToken VariableName;
		public ITerminalNode ID() { return GetToken(ClepsParser.ID, 0); }
		public ITerminalNode PASCALCASE_ID() { return GetToken(ClepsParser.PASCALCASE_ID, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variable; } }
		public override void EnterRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.EnterVariable(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.ExitVariable(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IClepsVisitor<TResult> typedVisitor = visitor as IClepsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableContext variable() {
		VariableContext _localctx = new VariableContext(Context, State);
		EnterRule(_localctx, 4, RULE_variable);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103; Match(T__5);
			State = 104;
			_localctx.VariableName = TokenStream.Lt(1);
			_la = TokenStream.La(1);
			if ( !(_la==PASCALCASE_ID || _la==ID) ) {
				_localctx.VariableName = ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NestedIdentifierContext : ParserRuleContext {
		public ITerminalNode[] PASCALCASE_ID() { return GetTokens(ClepsParser.PASCALCASE_ID); }
		public ITerminalNode PASCALCASE_ID(int i) {
			return GetToken(ClepsParser.PASCALCASE_ID, i);
		}
		public NestedIdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nestedIdentifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.EnterNestedIdentifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.ExitNestedIdentifier(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IClepsVisitor<TResult> typedVisitor = visitor as IClepsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNestedIdentifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NestedIdentifierContext nestedIdentifier() {
		NestedIdentifierContext _localctx = new NestedIdentifierContext(Context, State);
		EnterRule(_localctx, 6, RULE_nestedIdentifier);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 106; Match(PASCALCASE_ID);
			State = 111;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 107; Match(T__6);
					State = 108; Match(PASCALCASE_ID);
					}
					} 
				}
				State = 113;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumericContext : ParserRuleContext {
		public IToken NumericValue;
		public IToken NumericType;
		public ITerminalNode NUMERIC_TOKEN() { return GetToken(ClepsParser.NUMERIC_TOKEN, 0); }
		public ITerminalNode ID() { return GetToken(ClepsParser.ID, 0); }
		public NumericContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_numeric; } }
		public override void EnterRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.EnterNumeric(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.ExitNumeric(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IClepsVisitor<TResult> typedVisitor = visitor as IClepsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumeric(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumericContext numeric() {
		NumericContext _localctx = new NumericContext(Context, State);
		EnterRule(_localctx, 8, RULE_numeric);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114; _localctx.NumericValue = Match(NUMERIC_TOKEN);
			State = 116;
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 115; _localctx.NumericType = Match(ID);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassOrMemberNameContext : ParserRuleContext {
		public IToken Name;
		public ITerminalNode PASCALCASE_ID() { return GetToken(ClepsParser.PASCALCASE_ID, 0); }
		public ClassOrMemberNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classOrMemberName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.EnterClassOrMemberName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.ExitClassOrMemberName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IClepsVisitor<TResult> typedVisitor = visitor as IClepsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassOrMemberName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassOrMemberNameContext classOrMemberName() {
		ClassOrMemberNameContext _localctx = new ClassOrMemberNameContext(Context, State);
		EnterRule(_localctx, 10, RULE_classOrMemberName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118; _localctx.Name = Match(PASCALCASE_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VisibilityModifierContext : ParserRuleContext {
		public ITerminalNode PUBLIC() { return GetToken(ClepsParser.PUBLIC, 0); }
		public ITerminalNode INTERNAL() { return GetToken(ClepsParser.INTERNAL, 0); }
		public VisibilityModifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_visibilityModifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.EnterVisibilityModifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.ExitVisibilityModifier(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IClepsVisitor<TResult> typedVisitor = visitor as IClepsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVisibilityModifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VisibilityModifierContext visibilityModifier() {
		VisibilityModifierContext _localctx = new VisibilityModifierContext(Context, State);
		EnterRule(_localctx, 12, RULE_visibilityModifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120;
			_la = TokenStream.La(1);
			if ( !(_la==PUBLIC || _la==INTERNAL) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypenameContext : ParserRuleContext {
		public TypenameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typename; } }
	 
		public TypenameContext() { }
		public virtual void CopyFrom(TypenameContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class BasicTypeContext : TypenameContext {
		public NestedIdentifierContext RawTypeName;
		public NestedIdentifierContext nestedIdentifier() {
			return GetRuleContext<NestedIdentifierContext>(0);
		}
		public BasicTypeContext(TypenameContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.EnterBasicType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.ExitBasicType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IClepsVisitor<TResult> typedVisitor = visitor as IClepsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBasicType(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ArrayTypeContext : TypenameContext {
		public TypenameContext BaseType;
		public NumericContext _numeric;
		public IList<NumericContext> _ArrayDimensions = new List<NumericContext>();
		public TypenameContext typename() {
			return GetRuleContext<TypenameContext>(0);
		}
		public NumericContext[] numeric() {
			return GetRuleContexts<NumericContext>();
		}
		public NumericContext numeric(int i) {
			return GetRuleContext<NumericContext>(i);
		}
		public ArrayTypeContext(TypenameContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.EnterArrayType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.ExitArrayType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IClepsVisitor<TResult> typedVisitor = visitor as IClepsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArrayType(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FunctionTypeContext : TypenameContext {
		public TypenameContext _typename;
		public IList<TypenameContext> _FunctionParameterTypes = new List<TypenameContext>();
		public TypenameContext FunctionReturnType;
		public TypenameContext[] typename() {
			return GetRuleContexts<TypenameContext>();
		}
		public TypenameContext typename(int i) {
			return GetRuleContext<TypenameContext>(i);
		}
		public FunctionTypeContext(TypenameContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.EnterFunctionType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.ExitFunctionType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IClepsVisitor<TResult> typedVisitor = visitor as IClepsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionType(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PointerTypeContext : TypenameContext {
		public TypenameContext BaseType;
		public TypenameContext typename() {
			return GetRuleContext<TypenameContext>(0);
		}
		public PointerTypeContext(TypenameContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.EnterPointerType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IClepsListener typedListener = listener as IClepsListener;
			if (typedListener != null) typedListener.ExitPointerType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IClepsVisitor<TResult> typedVisitor = visitor as IClepsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPointerType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypenameContext typename() {
		return typename(0);
	}

	private TypenameContext typename(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		TypenameContext _localctx = new TypenameContext(Context, _parentState);
		TypenameContext _prevctx = _localctx;
		int _startState = 14;
		EnterRecursionRule(_localctx, 14, RULE_typename, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 138;
			switch (TokenStream.La(1)) {
			case T__10:
				{
				_localctx = new FunctionTypeContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 123; Match(T__10);
				State = 132;
				_la = TokenStream.La(1);
				if (_la==T__10 || _la==PASCALCASE_ID) {
					{
					State = 124; ((FunctionTypeContext)_localctx)._typename = typename(0);
					((FunctionTypeContext)_localctx)._FunctionParameterTypes.Add(((FunctionTypeContext)_localctx)._typename);
					State = 129;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
					while (_la==T__8) {
						{
						{
						State = 125; Match(T__8);
						State = 126; ((FunctionTypeContext)_localctx)._typename = typename(0);
						((FunctionTypeContext)_localctx)._FunctionParameterTypes.Add(((FunctionTypeContext)_localctx)._typename);
						}
						}
						State = 131;
						ErrorHandler.Sync(this);
						_la = TokenStream.La(1);
					}
					}
				}
